1) modified the main layout 2) fixed top menu is distorted when in mobile 3) removed the search category label in bottom sidebar 4) temporary remove the spinner

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -28,11 +28,11 @@
 
 
 .app-navbar {
-    position:fixed;
+/*    position:fixed;
     top:0;
     left:0;
     right:0;
-    z-index:2;
+    z-index:2; */
 }
 
 .app-navbar {
@@ -40,6 +40,6 @@
 }
 
 mat-sidenav {
-  width: 280px;
+  width: 260px;
 } 
 
