--- a/src/app/products-search/products-search.component.css
+++ b/src/app/products-search/products-search.component.css
@@ -1,7 +1,7 @@
 
 
 .products-search-container {
-    padding: 10px;
+    padding: 5px;
 }
 
 /* .left-search-checkbox {
